src/test/resources/semantic/reject/emptyReturnNonVoidFunction.ul
void main() {
}

int foo() {
    return;
}
